[gd_scene load_steps=83 format=3 uid="uid://deqiv7y1s5d6y"]

[ext_resource type="Texture2D" uid="uid://bo2smhy3rtw0r" path="res://Assets/Player/player.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2"]
[ext_resource type="Resource" uid="uid://bwsy5ud4neyyk" path="res://Inventory/playerinv.tres" id="2_00mtt"]
[ext_resource type="Texture2D" uid="uid://p53c0c8ohn4d" path="res://Assets/Player/playerPEGARABAJOPALO.png" id="2_5o7fb"]
[ext_resource type="Texture2D" uid="uid://e8s6yno27sqp" path="res://Assets/Player/playerATAQUEIZQUIERDAPALO.png" id="3_4m3t8"]
[ext_resource type="Texture2D" uid="uid://ba2h1vi7iyfte" path="res://Assets/Player/playerATAQUEDERECHAPALO.png" id="4_as72o"]
[ext_resource type="Texture2D" uid="uid://cfo6b68vhgadu" path="res://Assets/Player/playerATAQUEARRIBAPALO.png" id="5_5vi7f"]
[ext_resource type="Texture2D" uid="uid://d4iy2pic320fk" path="res://Assets/Player/idle_protagonista.png" id="6_d5d83"]
[ext_resource type="Texture2D" uid="uid://sy4opsdq28pi" path="res://Assets/Additional/interrogante.png" id="7_5axk2"]
[ext_resource type="Texture2D" uid="uid://bsjrdlar8bv88" path="res://Assets/Player/idle_protagonista_otro_lado.png" id="7_jxsf7"]
[ext_resource type="Texture2D" uid="uid://ctr75il6cgcjs" path="res://Assets/Player/idle_protagonista_lado.png" id="8_8dlmc"]
[ext_resource type="Texture2D" uid="uid://cyc4thqs5hppc" path="res://Assets/Player/idle_protagonista_espalda.png" id="9_6h0w7"]
[ext_resource type="Texture2D" uid="uid://cho7tb41qum31" path="res://Assets/Player/playerCorreindo.png" id="9_mrjuo"]
[ext_resource type="Texture2D" uid="uid://ce1n0um45pmgx" path="res://Assets/Player/PlayerCorriendoIzquierda.png" id="10_oartf"]
[ext_resource type="Texture2D" uid="uid://dikxyokue7b5a" path="res://Assets/Player/playerCorriendoDerecha.png" id="11_kh2wa"]
[ext_resource type="Texture2D" uid="uid://caxwdaa4a43cq" path="res://Assets/Player/playerCorriendoEspalda.png" id="12_7soqx"]
[ext_resource type="PackedScene" uid="uid://c16pf6l0yxj20" path="res://Inventory/inv_ui.tscn" id="17_e63fe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_653op"]
atlas = ExtResource("2_5o7fb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8elbt"]
atlas = ExtResource("2_5o7fb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3irp"]
atlas = ExtResource("2_5o7fb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27bpx"]
atlas = ExtResource("3_4m3t8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er0d8"]
atlas = ExtResource("3_4m3t8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmt5n"]
atlas = ExtResource("3_4m3t8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kodpc"]
atlas = ExtResource("4_as72o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgk2b"]
atlas = ExtResource("4_as72o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obfx1"]
atlas = ExtResource("4_as72o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6mxk"]
atlas = ExtResource("5_5vi7f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5tgq"]
atlas = ExtResource("5_5vi7f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymrgd"]
atlas = ExtResource("5_5vi7f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wltw"]
atlas = ExtResource("6_d5d83")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwqse"]
atlas = ExtResource("6_d5d83")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhljd"]
atlas = ExtResource("6_d5d83")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tq1a"]
atlas = ExtResource("6_d5d83")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5lj5"]
atlas = ExtResource("6_d5d83")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhv7q"]
atlas = ExtResource("6_d5d83")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3xvw"]
atlas = ExtResource("7_jxsf7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ssml"]
atlas = ExtResource("7_jxsf7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmgxo"]
atlas = ExtResource("7_jxsf7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q6g0"]
atlas = ExtResource("8_8dlmc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdbqs"]
atlas = ExtResource("8_8dlmc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i37mx"]
atlas = ExtResource("8_8dlmc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57d0f"]
atlas = ExtResource("9_mrjuo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkfou"]
atlas = ExtResource("9_mrjuo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpfeb"]
atlas = ExtResource("9_mrjuo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fds7"]
atlas = ExtResource("9_mrjuo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h763m"]
atlas = ExtResource("10_oartf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjy33"]
atlas = ExtResource("10_oartf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmn43"]
atlas = ExtResource("10_oartf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xomin"]
atlas = ExtResource("10_oartf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bpl2"]
atlas = ExtResource("11_kh2wa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4dnu"]
atlas = ExtResource("11_kh2wa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8mcv"]
atlas = ExtResource("11_kh2wa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j54t7"]
atlas = ExtResource("11_kh2wa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptlro"]
atlas = ExtResource("12_7soqx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ym7"]
atlas = ExtResource("12_7soqx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgmpl"]
atlas = ExtResource("12_7soqx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qm46"]
atlas = ExtResource("12_7soqx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eafy6"]
atlas = ExtResource("9_6h0w7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn3d8"]
atlas = ExtResource("9_6h0w7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3cs8"]
atlas = ExtResource("9_6h0w7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djcqm"]
atlas = ExtResource("1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thnqo"]
atlas = ExtResource("1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gra1"]
atlas = ExtResource("1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyixy"]
atlas = ExtResource("1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk82i"]
atlas = ExtResource("1")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65lpv"]
atlas = ExtResource("1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfk73"]
atlas = ExtResource("1")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy32t"]
atlas = ExtResource("1")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1hc0"]
atlas = ExtResource("1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12cod"]
atlas = ExtResource("1")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh24m"]
atlas = ExtResource("1")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb17s"]
atlas = ExtResource("1")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd6l6"]
atlas = ExtResource("1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuldw"]
atlas = ExtResource("1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1wd0"]
atlas = ExtResource("1")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egcu2"]
atlas = ExtResource("1")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rfh70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_653op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8elbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3irp")
}],
"loop": true,
"name": &"Attack_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27bpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er0d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmt5n")
}],
"loop": true,
"name": &"Attack_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kodpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgk2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obfx1")
}],
"loop": true,
"name": &"Attack_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6mxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5tgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymrgd")
}],
"loop": true,
"name": &"Attack_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_6wltw")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_qwqse")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_bhljd")
}],
"loop": true,
"name": &"Down_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_1tq1a")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_g5lj5")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_mhv7q")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_m3xvw")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_1ssml")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_gmgxo")
}],
"loop": true,
"name": &"Left_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_4q6g0")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_gdbqs")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_i37mx")
}],
"loop": true,
"name": &"Right_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_57d0f")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_fkfou")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_rpfeb")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_5fds7")
}],
"loop": true,
"name": &"Runing_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_h763m")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_vjy33")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_xmn43")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_xomin")
}],
"loop": true,
"name": &"Runing_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_1bpl2")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_m4dnu")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_w8mcv")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_j54t7")
}],
"loop": true,
"name": &"Runing_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_ptlro")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_p3ym7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_tgmpl")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_4qm46")
}],
"loop": true,
"name": &"Runing_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_eafy6")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_tn3d8")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_d3cs8")
}],
"loop": true,
"name": &"Up_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djcqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thnqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gra1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyixy")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk82i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65lpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfk73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy32t")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1hc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12cod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh24m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb17s")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd6l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuldw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1wd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egcu2")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(18.1071, 11.4545)

[sub_resource type="CircleShape2D" id="CircleShape2D_cp0a5"]
radius = 16.1245

[sub_resource type="CircleShape2D" id="CircleShape2D_ftfeh"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_krird"]
radius = 16.0

[sub_resource type="SpriteFrames" id="SpriteFrames_g58p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_5axk2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource("2")
inv = ExtResource("2_00mtt")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rfh70")
animation = &"Runing_Up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.499995, -1.3411e-06)
rotation = -3.14159
scale = Vector2(0.717949, -1.57143)
shape = SubResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_cp0a5")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0.129412, 1)
offset_left = -8.0
offset_top = 14.0
offset_right = 142.0
offset_bottom = 34.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="detection_area_chat" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area_chat"]
shape = SubResource("CircleShape2D_ftfeh")

[node name="Interact" type="Area2D" parent="." groups=["Interactuable"]]
position = Vector2(0, -21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2(0, 21)
shape = SubResource("CircleShape2D_krird")

[node name="interrogante" type="AnimatedSprite2D" parent="Interact"]
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_g58p4")

[node name="xpbar" type="ProgressBar" parent="."]
modulate = Color(0.180392, 0.533333, 0.717647, 1)
self_modulate = Color(0.0431373, 0.227451, 0.494118, 1)
offset_left = -8.00001
offset_top = 17.0
offset_right = 142.0
offset_bottom = 37.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="Inv_UI" parent="." instance=ExtResource("17_e63fe")]
offset_left = -74.0
offset_top = -25.0
offset_right = -11.0
offset_bottom = 24.0

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
[connection signal="body_entered" from="detection_area_chat" to="." method="_on_detection_area_chat_body_entered"]
[connection signal="body_exited" from="detection_area_chat" to="." method="_on_detection_area_chat_body_exited"]
[connection signal="body_entered" from="Interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_interact_body_exited"]
